--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ pom.xml.asc
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 *.iml
+
+resources/public/bower_components/
