--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,5 @@ pom.xml.asc
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 *.iml
 
-resources/public/bower_components/ 
+resources/public/bower_components/
+resources/posts/.Ulysses-Group.plist 
